[package]
name = "nmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
header = "0.1.1"
http = "1.1.0"
hyper = "1.3.1"
lazy_static = "1.4.0"
method = "0.0.0"
regex = "1.10.4"
serde = "1.0.201"
serde_json = "1.0.117"
slog = "2.7.0"
tokio = "1.37.0"
uri = "0.4.0"
url = "2.5.0"
warp = "0.3.7"
web = "0.2.12"
web-sys = "0.3.69"
